examples/test/testpolicy3940.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3940
  namespace: namespace250
spec:
  podSelector:
    matchLabels:
      key35: value38
      key12: value4
      key1: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value20
          key32: value22
          key1: value30
      podSelector:
        matchLabels:
          key15: value4
